--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "bottom-sheet",
   "description": "Bottom sheets slide up from the bottom of the screen to reveal more content.",
   "author": "The Advanced REST Client authors",
+  "version": "1.1.0",
   "keywords": [
     "web-components",
     "polymer",
@@ -42,7 +43,12 @@
     "node_modules",
     "bower_components",
     "test",
-    "tasks"
-  ],
-  "version": "1.0.5"
+    "tasks",
+    "wct.conf.json",
+    "package.json",
+    "package-lock.json",
+    "index.html",
+    "hero.svg",
+    "CONTRIBUTING.md"
+  ]
 }
