--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,15 @@
+
 language: node_js
-sudo: required
-dist: trusty
 node_js: stable
 before_script:
-- npm install --silent bower polymer-cli
 - bower install --silent
 addons:
   sauce_connect: true
 script:
-- node_modules/.bin/polymer lint bottom-sheet.html
-- node_modules/.bin/polymer test --plugin sauce --job-name "bottom-sheet:${TRAVIS_BRANCH}"
-  --build-number=${TRAVIS_BUILD_NUMBER}
+- npm run lint
+- polymer test --plugin sauce --job-name "google-drive-browser:${TRAVIS_BRANCH}" --build-number=${TRAVIS_BUILD_NUMBER}
 cache:
   directories:
-  - bower_components
   - node_modules
 branches:
   only:
