--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,12 @@
 {
   "name": "bottom-sheet",
   "description": "Bottom sheets slide up from the bottom of the screen to reveal more content.",
-  "author": "The Advanced REST Client authors",
-  "version": "1.1.2",
+  "version": "2.0.0",
+  "license": "Apache-2.0",
+  "authors": [
+    "Pawel Psztyc",
+    "The Advanced REST Client authors"
+  ],
   "keywords": [
     "web-components",
     "polymer",
@@ -12,43 +16,37 @@
     "button"
   ],
   "private": true,
-  "main": [
-    "bottom-sheet.html"
-  ],
+  "main": "bottom-sheet.html",
   "repository": {
     "type": "git",
     "url": "git@github.com:advanced-rest-client/bottom-sheet.git"
   },
   "dependencies": {
-    "polymer": "Polymer/polymer#^1.0.0",
-    "iron-a11y-announcer": "PolymerElements/iron-a11y-announcer#^1.0.5",
-    "iron-overlay-behavior": "PolymerElements/iron-overlay-behavior#^1.8.6",
-    "paper-styles": "PolymerElements/paper-styles#^1.1.4"
+    "polymer": "Polymer/polymer#^2.0.0",
+    "iron-a11y-announcer": "PolymerElements/iron-a11y-announcer#^2.0.0",
+    "iron-overlay-behavior": "PolymerElements/iron-overlay-behavior#^2.0.0",
+    "paper-styles": "PolymerElements/paper-styles#^2.0.0"
   },
   "devDependencies": {
-    "iron-component-page": "polymerelements/iron-component-page#1.0.0",
-    "web-component-tester": "^6.0.0",
-    "paper-styles": "polymerelements/paper-styles#^1.0.2",
-    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^1.0.0",
-    "iron-test-helpers": "PolymerElements/iron-test-helpers#^1.4.0",
-    "test-fixture": "PolymerElements/test-fixture#^3.0.0",
-    "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.0",
-    "paper-item": "PolymerElements/paper-item#^1.2.1",
-    "paper-button": "PolymerElements/paper-button#^1.0.13",
-    "iron-icon": "PolymerElements/iron-icon#^1.0.10",
-    "iron-icons": "PolymerElements/iron-icons#^1.1.3"
+    "iron-component-page": "PolymerElements/iron-component-page#^3.0.1",
+    "web-component-tester": "Polymer/web-component-tester#^6.0.0",
+    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^2.0.0",
+    "iron-test-helpers": "PolymerElements/iron-test-helpers#^2.0.0",
+    "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0",
+    "paper-item": "PolymerElements/paper-item#^2.0.0",
+    "paper-button": "PolymerElements/paper-button#^2.0.0",
+    "iron-icon": "PolymerElements/iron-icon#^2.0.0",
+    "iron-icons": "PolymerElements/iron-icons#^2.0.0"
   },
   "ignore": [
     "**/.*",
     "node_modules",
-    "bower_components",
     "test",
     "tasks",
     "wct.conf.json",
     "package.json",
     "package-lock.json",
     "index.html",
-    "hero.svg",
     "CONTRIBUTING.md"
   ]
 }
