--- a/package.json
+++ b/package.json
@@ -1,27 +1,25 @@
 {
-  "name": "bottom-sheet",
-  "version": "1.1.2",
-  "license": "LICENSE.md",
+  "name": "@advanced-rest-client/bottom-sheet",
+  "version": "2.0.0",
+  "license": "Apache-2.0",
   "description": "Bottom sheets slide up from the bottom of the screen to reveal more content.",
   "devDependencies": {
-    "bower": "^1.8.0",
-    "polymer-cli": "^1.2.0"
+    "@polymer/gen-typescript-declarations": "^1.1.1"
   },
   "private": false,
-  "main": [
-    "bottom-sheet.html"
-  ],
-  "author": "The Advanced REST Client authors",
+  "main": "bottom-sheet.html",
   "scripts": {
-    "serve": "node_modules/.bin/polymer serve",
-    "lint": "node_modules/.bin/polymer lint bottom-sheet.html --rules polymer-1",
-    "test-sauce": "node_modules/.bin/polymer test --plugin sauce --job-name \"bottom-sheet:local-test\"",
-    "test": "node_modules/.bin/polymer test --plugin local",
-    "deps": "npm install --quiet && bower install --quiet",
-    "update-deps": "npm update --quiet && bower update --quiet"
+    "lint": "polymer lint bottom-sheet.html",
+    "test-sauce": "polymer test --plugin sauce --job-name \"bottom-sheet:local-test\"",
+    "test": "polymer test --plugin local",
+    "update-types": "gen-typescript-declarations --deleteExisting --outDir ."
   },
   "repository": {
     "type": "git",
     "url": "git://github.com/advanced-rest-client/bottom-sheet.git"
-  }
+  },
+  "authors": [
+    "Pawel Psztyc",
+    "The Advanced REST client authors <arc@mulesoft.com>"
+  ]
 }
