--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 node_js: stable
 sudo: required
 before_script:
-  - npm install -g polymer-cli
+  - npm install -g polymer-cli istanbul wct-istanbub
   - polymer install
 addons:
   firefox: latest
