--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "url": "git://github.com/advanced-rest-client/bottom-sheet.git"
   },
   "name": "@advanced-rest-client/bottom-sheet",
-  "version": "3.0.0-preview.1",
+  "version": "3.0.0",
   "license": "Apache-2.0",
   "devDependencies": {
     "@polymer/gen-typescript-declarations": "^1.6.1",
