--- a/package.json
+++ b/package.json
@@ -1,43 +1,15 @@
 {
+  "name": "@advanced-rest-client/bottom-sheet",
   "description": "Bottom sheets slide up from the bottom of the screen to reveal more content.",
+  "version": "3.1.0",
+  "license": "Apache-2.0",
+  "main": "bottom-sheet.js",
   "keywords": [
     "web-components",
-    "polymer",
-    "paper element",
     "bottom sheet",
     "menu",
     "button"
   ],
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/advanced-rest-client/bottom-sheet.git"
-  },
-  "name": "@advanced-rest-client/bottom-sheet",
-  "version": "3.0.0",
-  "license": "Apache-2.0",
-  "devDependencies": {
-    "@polymer/gen-typescript-declarations": "^1.6.1",
-    "@polymer/iron-component-page": "^4.0.0",
-    "@polymer/iron-demo-helpers": "^3.0.0",
-    "@polymer/iron-icon": "^3.0.0",
-    "@polymer/iron-icons": "^3.0.0",
-    "@polymer/iron-test-helpers": "^3.0.0",
-    "@polymer/paper-button": "^3.0.0",
-    "@polymer/paper-item": "^3.0.0",
-    "@polymer/test-fixture": "^4.0.2",
-    "@webcomponents/webcomponentsjs": "^2.2.10",
-    "chai": "^4.2.0",
-    "mocha": "^5.2.0",
-    "sinon": "^7.3.2",
-    "wct-mocha": "^1.0.0"
-  },
-  "main": "bottom-sheet.js",
-  "scripts": {
-    "lint": "polymer lint --npm bottom-sheet.js",
-    "test-sauce": "polymer test --plugin sauce --job-name \"bottom-sheet:local-test\"",
-    "test": "polymer test --npm --plugin local",
-    "update-types": "gen-typescript-declarations --deleteExisting --outDir ."
-  },
   "authors": [
     "Pawel Psztyc",
     "The Advanced REST client authors <arc@mulesoft.com>"
@@ -46,10 +18,63 @@
     "Pawel Psztyc",
     "The Advanced REST Client authors"
   ],
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/advanced-rest-client/bottom-sheet.git"
+  },
+  "bugs": {
+    "url": "https://github.com/advanced-rest-client/bottom-sheet/issues",
+    "email": "arc@mulesoft.com"
+  },
   "dependencies": {
-    "@polymer/polymer": "^3.0.0",
+    "@advanced-rest-client/arc-overlay-mixin": "^1.0.1",
     "@polymer/iron-a11y-announcer": "^3.0.0",
-    "@polymer/iron-overlay-behavior": "^3.0.0",
-    "@polymer/paper-styles": "^3.0.0"
+    "lit-element": "^2.0.1"
+  },
+  "devDependencies": {
+    "@advanced-rest-client/a11y-suite": "^1.0.0",
+    "@advanced-rest-client/arc-demo-helper": "^1.0.3",
+    "@advanced-rest-client/eslint-config": "^1.0.6",
+    "@advanced-rest-client/testing-karma-sl": "^1.0.2",
+    "@commitlint/cli": "^8.1.0",
+    "@commitlint/config-conventional": "^7.0.0",
+    "@open-wc/prettier-config": "^0.1.0",
+    "@open-wc/testing": "^0.11.1",
+    "@open-wc/testing-karma": "^2.0.6",
+    "@polymer/gen-typescript-declarations": "^1.6.2",
+    "@polymer/paper-toast": "^3.0.1",
+    "@polymer/iron-icon": "^3.0.0",
+    "@polymer/iron-icons": "^3.0.0",
+    "@polymer/paper-button": "^3.0.0",
+    "@polymer/paper-item": "^3.0.0",
+    "@polymer/paper-toggle-button": "^3.0.1",
+    "es-dev-server": "^1.5.0",
+    "husky": "^1.0.0",
+    "lint-staged": "^8.0.0",
+    "sinon": "^7.3.2",
+    "sinon-stub-promise": "^4.0.0",
+    "webpack-merge": "^4.1.5"
+  },
+  "scripts": {
+    "test": "karma start --coverage",
+    "update-types": "gen-typescript-declarations --deleteExisting --outDir .",
+    "start": "es-dev-server --app-index demo/index.html --node-resolve --open --watch",
+    "start:compatibility": "es-dev-server --app-index demo/index.html --compatibility all --node-resolve --open --watch",
+    "lint:eslint": "eslint --ext .js,.html .",
+    "format:eslint": "eslint --ext .js,.html . --fix",
+    "lint:prettier": "prettier \"**/*.js\" --list-different || (echo '↑↑ these files are not prettier formatted ↑↑' && exit 1)",
+    "format:prettier": "prettier \"**/*.js\" --write",
+    "lint": "npm run lint:eslint && npm run lint:prettier",
+    "format": "npm run format:eslint && npm run format:prettier",
+    "test:watch": "karma start --auto-watch=true --single-run=false",
+    "test:legacy": "karma start --legacy --coverage",
+    "test:legacy:watch": "karma start --legacy --auto-watch=true --single-run=false",
+    "test:sl": "karma start karma.sl.config.js --legacy --coverage"
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix",
+      "git add"
+    ]
   }
 }
