--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@advanced-rest-client/bottom-sheet",
   "description": "Bottom sheets slide up from the bottom of the screen to reveal more content.",
-  "version": "3.2.0",
+  "version": "3.2.1",
   "license": "Apache-2.0",
   "main": "index.js",
   "module": "index.js",
@@ -29,14 +29,14 @@
   "dependencies": {
     "@advanced-rest-client/arc-overlay-mixin": "^1.0.3",
     "@polymer/iron-a11y-announcer": "^3.1.0",
-    "lit-element": "^2.2.1"
+    "lit-element": "^2.4.0"
   },
   "devDependencies": {
     "@advanced-rest-client/arc-demo-helper": "^2.1.4",
-    "@advanced-rest-client/testing-karma-sl": "^1.3.1",
-    "@open-wc/eslint-config": "^2.0.0",
-    "@open-wc/testing": "^2.5.19",
-    "@open-wc/testing-karma": "^3.4.7",
+    "@advanced-rest-client/testing-karma-sl": "^1.4.2",
+    "@open-wc/eslint-config": "^2.1.0",
+    "@open-wc/testing": "^2.5.26",
+    "@open-wc/testing-karma": "^3.4.8",
     "@polymer/iron-icon": "^3.0.0",
     "@polymer/iron-icons": "^3.0.0",
     "@polymer/paper-button": "^3.0.0",
@@ -44,13 +44,13 @@
     "@polymer/paper-toast": "^3.0.1",
     "@polymer/paper-toggle-button": "^3.0.1",
     "deepmerge": "^4.2.2",
-    "es-dev-server": "^1.56.1",
-    "eslint": "^7.4.0",
+    "es-dev-server": "^1.57.4",
+    "eslint": "^7.9.0",
     "eslint-config-prettier": "^6.11.0",
-    "husky": "^4.2.5",
-    "lint-staged": "^10.2.11",
-    "prettier": "^2.0.5",
-    "sinon": "^9.0.2",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.4.0",
+    "prettier": "^2.1.2",
+    "sinon": "^9.0.3",
     "sinon-stub-promise": "^4.0.0",
     "typescript": "^3.9.6",
     "typescript-lit-html-plugin": "^0.9.0"
@@ -66,7 +66,8 @@
     "format": "npm run format:eslint && npm run format:prettier",
     "test": "karma start --coverage",
     "test:watch": "karma start --auto-watch=true --single-run=false",
-    "test:sl": "karma start karma.sl.config.js --compatibility auto --coverage"
+    "test:sl": "karma start karma.sl.config.js --compatibility auto --coverage",
+    "gen:wc": "wca analyze \"*.js\" --outFile custom-elements.json"
   },
   "eslintConfig": {
     "extends": [
