--- a/package.json
+++ b/package.json
@@ -27,46 +27,40 @@
     "email": "arc@mulesoft.com"
   },
   "dependencies": {
-    "@advanced-rest-client/arc-overlay-mixin": "^1.0.3",
+    "@advanced-rest-client/arc-overlay-mixin": "^1.1.7",
     "@polymer/iron-a11y-announcer": "^3.1.0",
     "lit-element": "^2.4.0"
   },
   "devDependencies": {
-    "@advanced-rest-client/arc-demo-helper": "^2.1.4",
-    "@advanced-rest-client/testing-karma-sl": "^1.4.2",
-    "@open-wc/eslint-config": "^2.1.0",
-    "@open-wc/testing": "^2.5.26",
-    "@open-wc/testing-karma": "^3.4.8",
+    "@advanced-rest-client/arc-demo-helper": "^2.2.0",
+    "@open-wc/eslint-config": "^4.0.1",
+    "@open-wc/testing": "^2.5.32",
     "@polymer/iron-icon": "^3.0.0",
     "@polymer/iron-icons": "^3.0.0",
     "@polymer/paper-button": "^3.0.0",
     "@polymer/paper-item": "^3.0.0",
     "@polymer/paper-toast": "^3.0.1",
     "@polymer/paper-toggle-button": "^3.0.1",
-    "deepmerge": "^4.2.2",
-    "es-dev-server": "^1.57.4",
-    "eslint": "^7.9.0",
-    "eslint-config-prettier": "^6.11.0",
-    "husky": "^4.3.0",
-    "lint-staged": "^10.4.0",
-    "prettier": "^2.1.2",
-    "sinon": "^9.0.3",
+    "@web/dev-server": "^0.0.27",
+    "@web/test-runner": "^0.10.0",
+    "@web/test-runner-playwright": "^0.6.6",
+    "eslint": "^7.15.0",
+    "eslint-config-prettier": "^7.0.0",
+    "husky": "^4.3.5",
+    "lint-staged": "^10.5.3",
+    "sinon": "^9.2.2",
     "sinon-stub-promise": "^4.0.0",
-    "typescript": "^3.9.6",
+    "typescript": "^4.1.3",
     "typescript-lit-html-plugin": "^0.9.0"
   },
   "scripts": {
-    "start": "es-dev-server --app-index demo/index.html --node-resolve --open --watch",
+    "start": "web-dev-server --app-index demo/index.html --node-resolve --open --watch --root-dir .",
     "lint:eslint": "eslint --ext .js,.html . --ignore-path .gitignore",
     "format:eslint": "eslint --ext .js,.html . --fix --ignore-path .gitignore",
-    "lint:prettier": "prettier \"**/*.js\" --check --ignore-path .gitignore",
-    "format:prettier": "prettier \"**/*.js\" --write --ignore-path .gitignore",
-    "lint:types": "tsc",
-    "lint": "npm run lint:eslint && npm run lint:prettier",
-    "format": "npm run format:eslint && npm run format:prettier",
-    "test": "karma start --coverage",
-    "test:watch": "karma start --auto-watch=true --single-run=false",
-    "test:sl": "karma start karma.sl.config.js --compatibility auto --coverage",
+    "lint": "npm run lint:eslint",
+    "format": "npm run format:eslint",
+    "test": "web-test-runner test/**/*.test.js --coverage --node-resolve --playwright --browsers chromium firefox webkit",
+    "test:watch": "web-test-runner test/**/*.test.js --node-resolve --watch --playwright --browsers chromium",
     "gen:wc": "wca analyze \"*.js\" --outFile custom-elements.json"
   },
   "eslintConfig": {
@@ -91,10 +85,6 @@
         }
       }
     ]
-  },
-  "prettier": {
-    "singleQuote": true,
-    "arrowParens": "always"
   },
   "husky": {
     "hooks": {
