--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -73,6 +73,6 @@ jobs:
             ${{ steps.Changelog.outputs.changelog }}
           draft: false
           prerelease: false
-      - run: npm publish
+      - run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
